# alejandra

./: flake.nix  rustfmt.toml
src/alejandra/: Cargo.toml
src/alejandra/src/: builder.rs  children.rs  children2.rs  format.rs  utils.rs
src/alejandra/src/parsers/: pattern.rs
src/alejandra/src/rules/: apply.rs  attr_set.rs  bin_op.rs  if_else.rs  inherit.rs  key_value.rs  lambda.rs  let_in.rs  list.rs  mod.rs  paren.rs  pat_bind.rs  pat_entry.rs  pattern.rs  root.rs  string.rs
src/alejandra/tests/: fmt.rs
src/alejandra_cli/: Cargo.toml
src/alejandra_cli/src/: cli.rs  find.rs  main.rs
